--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/nodeunit test"
   },
   "repository": {
     "type": "git",
@@ -35,5 +35,8 @@
   "dependencies": {
     "github": "~0.1.12",
     "when": "~2.6.0"
+  },
+  "devDependencies": {
+    "nodeunit": "~0.8.2"
   }
 }
