--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "url": "https://github.com/eighttrackmind/github-repos/issues"
   },
   "dependencies": {
-    "github": "~0.1.12",
-    "when": "~2.6.0"
+    "when": "~2.6.0",
+    "request": "~2.27.0"
   },
   "devDependencies": {
     "nodeunit": "~0.8.2"
