--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-repos",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Fetch a user's repository count from Github",
   "main": "github-repos.js",
   "directories": {
@@ -25,7 +25,9 @@
     "tally",
     "module",
     "author",
-    "social"
+    "social",
+    "oauth",
+    "authenticate"
   ],
   "author": "Boris Cherny <boris@performancejs.com>",
   "license": "MIT",
